--- a/Changes
+++ b/Changes
@@ -1,6 +1,10 @@
 Revision history for Data-Printer-Filter-DBIx-Class
 
 {{$NEXT}}
+    - Allow for resultsets which don't return objects (Reported by Peter
+      Rabbitson)
+    - Allow for objects which overload boolean comparisons (Reported by Peter
+      Rabbitson)
 
 0.000001  2016-01-20 14:45:53-05:00 America/Toronto
     - Initial release.
