--- a/README
+++ b/README
@@ -3,7 +3,7 @@ NAME
     to DBIx::Class objects
 
 VERSION
-    version 0.000001
+    version 0.000002
 
 SYNOPSIS
     In your program:
@@ -27,7 +27,7 @@ AUTHOR
     Olaf Alders <olaf@wundercounter.com>
 
 COPYRIGHT AND LICENSE
-    This software is Copyright (c) 2015 by MaxMind, Inc..
+    This software is Copyright (c) 2015 by MaxMind, Inc.
 
     This is free software, licensed under:
 
