--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Data-Printer-Filter-DBIx-Class
 
 {{$NEXT}}
+    - Bumps minimum version of Data::Printer to 0.38
 
 0.000003  2016-02-04 15:19:07-05:00 America/Toronto
     - $ENV{DDP_DBIC_ROW_LIMIT} can be used to control how many ResultSet rows
