Deprecate this module in favour of the official DB filter

--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Data-Printer-Filter-DBIx-Class
 
 {{$NEXT}}
+    - Deprecate this module in favour of the official DB filter.
 
 0.000004  2016-02-05 12:10:57-05:00 America/Toronto
     - Bumps minimum version of Data::Printer to 0.38
